examples/harbor/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor
  namespace: harbor
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: harbor-portal
